@@ -1,6 +1,7 @@
 User johns
 Date:
 
+    Support switching the primary device with svdrp.
     Disable and reenable screen saver and DPMS.
     Video source code cleanup.
     Fix fast backward with some h264 streams.
